--- a/powerGrid_webApp/IOTEG/public/index.html
+++ b/powerGrid_webApp/IOTEG/public/index.html
@@ -35,11 +35,14 @@
 			    <img id="sun" src="image/animated-sun.gif" style="height:130px;width:130px;position: absolute; top:20px; left:100px;">
 			    <img id="solarPanel" src="image/solarPanel.png" style="height:130px;width:130px;position: absolute; top:300px; left:100px;">
 				<img id="home" src="image/home.png" style="height:130px;width:130px;position: absolute; top:300px; left:300px;">
+				<h3 style="position: absolute; top:60px; right:700px;">Solar To Grid</h3>
 				<img id="sensor1Gauge" style="height:130px;width:130px;position: absolute; top:105px; left:500px;">
 				<img id="grid" src="image/base-icon.png" style="height:130px;width:130px;position: absolute; top:105px; left:700px;">
+				<h3 style="position: absolute; bottom:155px; right:730px;">Solar To Load</h3>
 				<img id="sensor2Gauge" style="height:130px;width:130px;position: absolute; top:450px; left:500px;"></img>
 				<img id="junction" src="image/circle.svg" style="height:10px;width:10px;position: absolute; top:510px; left:760px;"></img>
 				<img id="switch" src="image/circle.svg" style="height:10px;width:10px;position: absolute; top:510px; left:960px;"></img>
+				<h3 style="position: absolute; top:280px; right:650px;">Grid To<br>Load</h3>
 				<img id="sensor3Gauge" display:"inline" style="height:130px;width:130px;position: absolute; top:305px; left:700px;"></img>
 				<div id="bulb" style="height:130px;width:130px;position: absolute; top:255px; left:900px;">
 					<svg  id="bulb" class="fancy-bulb" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
